# dc-core

./: .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac
src/: CMakeLists.txt  Makefile.am  core_client.cpp  core_client.hpp
