CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( dcCore )
CMAKE_POLICY(SET CMP0012 NEW)


FILE( GLOB CORE_INC_FILES "${CMAKE_SOURCE_DIR}/dependencies/dc-core/src/*.hpp" )
FILE( GLOB CORE_SRC_FILES "${CMAKE_SOURCE_DIR}/dependencies/dc-core/src/*.cpp" )

SOURCE_GROUP( "src" FILES ${CORE_INC_FILES} ${CORE_SRC_FILES} )
 
ADD_LIBRARY( dcCore STATIC ${CORE_SRC_FILES} ${CORE_INC_FILES} )

IF( WIN32 )
	ADD_DEFINITIONS( -DDC_WINDOWS )
ENDIF(  )

if( UNIX )
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
ENDIF(  )
